# linux-minidisc

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README  README.md  README.vuori  get_version.sh  himd.pro  md.pro  meson.build  meson_options.txt  version.txt
.github/workflows/: build.yaml
QHiMDTransfer/: .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  QHiMDTransfer  QHiMDTransfer.pro  QHiMDTransfer.pro.user~  main.cpp  qhimdaboutdialog.h  qhimdaboutdialog.ui  qhimdformatdialog.ui  qhimdmainwindow.cpp  qhimdmainwindow.h  qhimdmainwindow.ui  ui_qhimdmainwindow.h
QHiMDTransfer/debug/: moc_qhimdmainwindow.cpp
QHiMDTransfer/qtc-gdbmacros/: Makefile  Makefile.Debug  Makefile.Release  libgdbmacros.so.1.0.0
QHiMDTransfer/release/: moc_qhimdmainwindow.cpp
basictools/: .gitignore  Makefile  himdformat.c  himdformat_scg.c  himdscsitest.c  minikey.c  mp3dec.c  mp3key.c
cmake/Modules/: FindGlib.cmake  FindMad.cmake  FindMcrypt.cmake  FindSox.cmake
contrib/: netmd-send-file
contrib/atracenc/: atracenc.c  makefile
devicedb/: README  convert.py  makefile  minidisc.devids
devicedb/netmd-js/: netmd.devices.ts
devicedb/udev/: 60-minidisc.rules
docs/: README.fedora  himdcli.1  netmdcli.1  qhimdtransfer.1
docs/internals/: README.md
docs/libnetmd/: howto.html  index.html
docs/libnetmd/utilities/: char-to-hex.c  cleanup.pl  logparse.pl
himd/: himd.py
himdcli/: himdcli.c  himdcli.pro
himddump/: .gitignore  himddump.c  himddump.pro
himdtest/: .gitignore  CMakeLists.txt  himdtest  himdtest.c  himdtest.pro
libhimd/: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  NEWS  README  autogen.sh  codecinfo.c  codecinfo.h  config.h.in  configure.ac  encryption.c  frag.c  himd.c  himd.h  himd_config.h.in  himd_private.h  himdll.h  himdtest.c  libhimd.pro  mdstream.c  mp3download.c  mp3tools.c  sony_oma.c  sony_oma.h  trackindex.c  use_libhimd.pri
libnetmd/: .cdtproject  .gitignore  .project  CHANGELOG  Doxyfile  Makefile  common.c  common.h  const.h  descriptor.c  descriptor.h  error.c  error.h  groups.c  groups.h  hotplug-netmd  kataconv.c  kataconv.h  libnetmd-get_devname-patch.diff  libnetmd.c  libnetmd.h  libnetmd.pro  libnetmd_extended.h  libnetmd_playercontrol.c  libnetmd_secure.c  log.c  log.h  minidisc.usermap  netmd  netmd.c  netmd_dev.c  netmd_dev.h  netmd_dev_ids.h  netmd_trace.c  omgutils-patch.txt  patch.txt  playercontrol.c  playercontrol.h  query.c  query.h  (+14 more)
libnetmd/documentation/: .index.html.swp  proto.txt  protocol.html  protocol2.txt
libnetmd/documentation/index_files/: logo.html  openwindow.html  pix.html  showimages.html  styleNN.html
libnetmd/utilities/: char-to-hex.c  diff.txt  hex-to-char.c  logparse.pl
libusbmd/: libusbmd.c  libusbmd.h  libusbmd.pro  libusbmd_data.h  use_libusbmd.prl
netmd/: README  TODO  downloadhack.py  dump_md.py  libnetmd.py  libnetmd_dev_ids.py  libusb1.py  lsmd.py  lsusb.py  mdctl.py  upload.py  usb1.py
netmd/etc/: 20-netmd.fdi  README  netmd.rules
netmdcli/: .gitignore  cmds.c  cmds.h  netmdcli.c  netmdcli.pro
qhimdtransfer/: .gitignore  CMakeLists.txt  QHiMDTransfer.pro  editmetadatadialog.cpp  editmetadatadialog.h  editmetadatadialog.ui  icons.qrc  main.cpp  playbackcontrols.cpp  playbackcontrols.h  playbackcontrols.ui  qhimdaboutdialog.cpp  qhimdaboutdialog.h  qhimdaboutdialog.ui  qhimddetection.cpp  qhimddetection.h  qhimddetection.ui  qhimddetection_dev_ids.cpp  qhimddetection_dev_ids.h  qhimddummydetection.cpp  qhimdformatdialog.cpp  qhimdformatdialog.h  qhimdlinuxdetection.cpp  qhimdlinuxdetection.h  qhimdmacdetection.cpp  qhimdmacdetection.mm  qhimdmainwindow.cpp  qhimdmainwindow.h  qhimdmainwindow.ui  qhimdmodel.cpp  qhimdmodel.h  qhimdtransfer.pro  qhimdtransfer.rc  qhimdtransfer_ar.ts  qhimdtransfer_br.ts  qhimdtransfer_config.h.in  qhimdtransfer_cs.ts  qhimdtransfer_da.ts  qhimdtransfer_de.ts  qhimdtransfer_el.ts  (+36 more)
qhimdtransfer/linux/etc/: 60-minidisc.rules  README  minidisc_notify.sh
qhimdtransfer/linux/etc/udev/: 60-minidisc.rules
scripts/: build_all.sh  configure_make_package.sh  install_dependencies.sh  mingw-bundledlls  package_build.sh
scripts/macos/: Info.plist.in  qhimdtransfer.icns
scripts/mingw-cross-meson/: i686-w64-mingw32.txt  x86_64-w64-mingw32.txt
scripts/mingw-docker/: Dockerfile  build-jsonc.sh  build-libmad.sh  build-libusb.sh  qt5-symlinks.sh  x86_64-w64-mingw32.cmake
testdata/himd/: README.TXT
testdata/himd/HMDHIFI/: 00010012.HMA  ATDATA07.HMA  MCLIST06.HMA  MCLIST07.HMA  TRKIDX07.HMA  _MDHIFI.HMA  _RKIDX08.HMA
testdata/netmd/captures/: README  mz-n710-transfer.pcapng
